force-app/main/default/objects/bofc__BOFCOBFieldsDetails__c/bofc__BOFCOBFieldsDetails__c.object-meta.xml
<CustomObject>
    <label>BOFCOBFieldsDetails</label>
    <nameField>
        <label>BOFCOBFieldsDetails Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BOFCOBFieldsDetails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>