force-app/main/default/objects/bofc__BOFCOBFieldsDetails__c/fields/bofc__complianceGroup__c.field-meta.xml
<CustomField>
    <fullName>bofc__complianceGroup__c</fullName>
    <label>complianceGroup</label>
    <type>TextArea</type>
</CustomField>