force-app/main/default/objects/bofc__BOFCOBFieldsDetails__c/fields/bofc__Created_By_ID__c.field-meta.xml
<CustomField>
    <fullName>bofc__Created_By_ID__c</fullName>
    <label>Created_By_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>