force-app/main/default/objects/bofc__BOFCOBFieldsDetails__c/fields/bofc__defaultValue__c.field-meta.xml
<CustomField>
    <fullName>bofc__defaultValue__c</fullName>
    <label>defaultValue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>