force-app/main/default/objects/bofc__BOFCOBFieldsDetails__c/fields/bofc__defaultValue_n__c.field-meta.xml
<CustomField>
    <fullName>bofc__defaultValue_n__c</fullName>
    <label>defaultValue_n</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>