force-app/main/default/objects/bofc__BOFCOBFieldsDetails__c/fields/bofc__description__c.field-meta.xml
<CustomField>
    <fullName>bofc__description__c</fullName>
    <label>description</label>
    <type>TextArea</type>
</CustomField>