force-app/main/default/objects/bofc__BOFCOBFieldsDetails__c/fields/bofc__ExternalID__c.field-meta.xml
<CustomField>
    <fullName>bofc__ExternalID__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ExternalID</label>
    <type>Checkbox</type>
</CustomField>