force-app/main/default/objects/bofc__BOFCOBFieldsDetails__c/fields/bofc__Field_Usage__c.field-meta.xml
<CustomField>
    <fullName>bofc__Field_Usage__c</fullName>
    <label>Field Usage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>