force-app/main/default/objects/bofc__BOFCOBFieldsDetails__c/fields/bofc__formula__c.field-meta.xml
<CustomField>
    <fullName>bofc__formula__c</fullName>
    <label>formula</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>