force-app/main/default/objects/bofc__BOFCOBFieldsDetails__c/fields/bofc__label__c.field-meta.xml
<CustomField>
    <fullName>bofc__label__c</fullName>
    <label>label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>