force-app/main/default/objects/bofc__BOFCOBFieldsDetails__c/fields/bofc__PICKWrapperValue__c.field-meta.xml
<CustomField>
    <fullName>bofc__PICKWrapperValue__c</fullName>
    <label>PICKWrapperValue</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>