force-app/main/default/objects/bofc__BOFCOBFieldsDetails__c/fields/bofc__Required__c.field-meta.xml
<CustomField>
    <fullName>bofc__Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>