force-app/main/default/objects/bofc__BOFCOBFieldsDetails__c/fields/bofc__SecurityClassification__c.field-meta.xml
<CustomField>
    <fullName>bofc__SecurityClassification__c</fullName>
    <label>SecurityClassification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>