force-app/main/default/objects/bofc__BOFCOBFieldsDetails__c/fields/bofc__summaryOperation__c.field-meta.xml
<CustomField>
    <fullName>bofc__summaryOperation__c</fullName>
    <label>summaryOperation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>