force-app/main/default/objects/bofc__BOFCOBFieldsDetails__c/fields/bofc__trackHistory__c.field-meta.xml
<CustomField>
    <fullName>bofc__trackHistory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>trackHistory</label>
    <type>Checkbox</type>
</CustomField>