force-app/main/default/objects/bofc__BOFCOBFieldsDetails__c/fields/bofc__type_x__c.field-meta.xml
<CustomField>
    <fullName>bofc__type_x__c</fullName>
    <label>type_x</label>
    <length>255</length>
    <type>Text</type>
</CustomField>