force-app/main/default/objects/bofc__BOFCOBFieldsDetails__c/fields/bofc__Unique__c.field-meta.xml
<CustomField>
    <fullName>bofc__Unique__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unique</label>
    <type>Checkbox</type>
</CustomField>