force-app/main/default/objects/bofc__BOFCOBFieldsDetails__c/fields/bofc__visibleLines__c.field-meta.xml
<CustomField>
    <fullName>bofc__visibleLines__c</fullName>
    <label>visibleLines</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>